# rfa2json

./: .gitignore  README.md  cli.py  pyproject.toml
example/: bsp_revit_family_xml.xml
rfa2json/: __init__.py  analyzer.py  config.py  factory.py  models.py  service.py
rfa2json/extract/: __init__.py  json_extractor.py  xml_reader.py
rfa2json/repo/: __init__.py  json_repo.py
